--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.png" />
+        <img src="assets\images\nina.webp" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -151,22 +151,22 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+            src="assets\images\gallery\entreprise\jason-goodman-tHO1_OuKbg0-unsplash.webp"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+            src="assets\images\gallery\mariage\hannah-busing-RvF2R_qMpRk-unsplash.webp"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+            src="assets\images\gallery\portraits\ade-tunji-rVkhWWZFAtQ-unsplash.webp"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+            src="assets\images\gallery\mariage\jakob-owens-SiniLJkXhMc-unsplash.webp"
           />
           <img
             data-gallery-tag="Portrait"
@@ -181,7 +181,7 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+            src="assets\images\gallery\entreprise\mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
           />
         </div>
       </div>
@@ -279,7 +279,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.png" />
+          <img src="assets\images\camera.webp" />
         </div>
       </div>
     </div>
