--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+            src="assets\images\gallery\portraits\nino-van-prattenburg--443cl1uR_8-unsplash.webp"
           />
           <img
             data-gallery-tag="Concert"
