images redimensionnées en format webp

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="assets\images\gallery\entreprise\mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+            src="assets\images\gallery\entreprise\mateus-campos-felipe-Fsgzm8N0hIY-unsplash (1).webp"
           />
         </div>
       </div>
