--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="assets\images\gallery\mariage\jakob-owens-SiniLJkXhMc-unsplash.webp"
+            src="assets\images\gallery\mariage\jakob-owens-SiniLJkXhMc-unsplash (1).webp"
           />
           <img
             data-gallery-tag="Portrait"
