images redimensionnées en format webp

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="assets\images\gallery\portraits\ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+            src="assets\images\gallery\portraits\ade-tunji-rVkhWWZFAtQ-unsplash (1).webp"
           />
           <img
             data-gallery-tag="Mariages"
