images redimensionnées en format webp

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="assets\images\gallery\portraits\nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+            src="assets\images\gallery\portraits\nino-van-prattenburg--443cl1uR_8-unsplash (1).webp"
           />
           <img
             data-gallery-tag="Concert"
