images redimensionnées en format webp

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+            src="assets\images\gallery\concerts\austin-neill-hgO1wFPXl3I-unsplash (1).webp"
           />
           <img
             data-gallery-tag="Entreprises"
