--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="assets\images\nina.webp" />
+        <img src="assets\images\nina (1).webp" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
