--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="assets\images\gallery\entreprise\jason-goodman-tHO1_OuKbg0-unsplash.webp"
+            src="assets\images\gallery\entreprise\jason-goodman-tHO1_OuKbg0-unsplash (1).webp"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="assets\images\gallery\mariage\hannah-busing-RvF2R_qMpRk-unsplash.webp"
+            src="assets\images\gallery\mariage\hannah-busing-RvF2R_qMpRk-unsplash (1).webp"
           />
           <img
             data-gallery-tag="Portrait"
