--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="assets\images\camera.webp" />
+          <img src="assets\images\camera (1).webp" />
         </div>
       </div>
     </div>
