--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
+              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
+              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash.webp"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
+              src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash (1).webp"
               class="d-block w-100"
               alt="..."
             />
