--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (1).webp"
               class="d-block w-100"
               alt="..."
             />
