--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
               src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (1).webp"
               class="d-block w-100"
               alt="..."
+              loading="eager"
             />
           </div>
           <div class="carousel-item">
