redimensionnement du slider

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
           <div class="carousel-item active">
             <img
               src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (1).webp"
+              srcset="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash 650.webp 650w"
+              sizes="(max-width: 650px) 650px"
               class="d-block w-100"
               alt="..."
               loading="eager"
@@ -80,6 +82,8 @@
           <div class="carousel-item">
             <img
               src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash.webp"
+              srcset="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash 650.webp 650w"
+              sizes="(max-width: 650px) 650px"
               class="d-block w-100"
               alt="..."
             />
@@ -87,6 +91,8 @@
           <div class="carousel-item">
             <img
               src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash (1).webp"
+              srcset="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash 650.webp 650w"
+              sizes="(max-width: 650px) 650px"
               class="d-block w-100"
               alt="..."
             />
