--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
           <div class="carousel-item active">
             <img
               src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (1).webp"
-              srcset="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash 650.webp 650w"
+              srcset="
+                assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w
+              "
               sizes="(max-width: 650px) 650px"
               class="d-block w-100"
               alt="..."
@@ -82,20 +84,20 @@
           <div class="carousel-item">
             <img
               src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash.webp"
-              srcset="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash 650.webp 650w"
-              sizes="(max-width: 650px) 650px"
+              srcset="
+                assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w
+              "
+              sizes="(max-width: 650px)650px"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
-            <img
-              src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash (1).webp"
-              srcset="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash 650.webp 650w"
-              sizes="(max-width: 650px) 650px"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash
+            (1).webp"
+            srcset="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-650.webp
+            650w" sizes="(max-width: 650px) 650px" class="d-block w-100
+            alt="..." />
           </div>
         </div>
         <button
