--- a/index.html
+++ b/index.html
@@ -87,17 +87,21 @@
               srcset="
                 assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w
               "
-              sizes="(max-width: 650px)650px"
+              sizes="(max-width: 650px) 650px"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
-            <img src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash
-            (1).webp"
-            srcset="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-650.webp
-            650w" sizes="(max-width: 650px) 650px" class="d-block w-100
-            alt="..." />
+            <img
+              src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash (1).webp"
+              srcset="
+                assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w
+              "
+              sizes="(max-width: 650px) 650px"
+              class="d-block w-100"
+              alt="..."
+            />
           </div>
         </div>
         <button
