--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (1).webp"
+              src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               srcset="
-                assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w
+                assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w
               "
               sizes="(max-width: 650px) 650px"
               class="d-block w-100"
@@ -83,9 +83,9 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash.webp"
+              src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
               srcset="
-                assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w
+                assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w
               "
               sizes="(max-width: 650px) 650px"
               class="d-block w-100"
@@ -94,9 +94,9 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash (1).webp"
+              src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
               srcset="
-                assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w
+                assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w
               "
               sizes="(max-width: 650px) 650px"
               class="d-block w-100"
