--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               srcset="
                 assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w
               "
-              sizes="(max-width: 650px) 650px"
+              sizes="(max-width: 650px) 100vw"
               class="d-block w-100"
               alt="..."
               loading="eager"
@@ -87,7 +87,7 @@
               srcset="
                 assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w
               "
-              sizes="(max-width: 650px) 650px"
+              sizes="(max-width: 650px) 100vw"
               class="d-block w-100"
               alt="..."
             />
@@ -98,7 +98,7 @@
               srcset="
                 assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w
               "
-              sizes="(max-width: 650px) 650px"
+              sizes="(max-width: 650px) 100vw"
               class="d-block w-100"
               alt="..."
             />
