--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="assets\images\nina (1).webp" />
+        <img
+          src="assets\images\nina (1).webp"
+          srcset="assets/images/nina-650.webp 650w"
+          sizes="(max-width: 650px) 100vw"
+        />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
