--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
           src="assets\images\nina (1).webp"
           srcset="assets/images/nina-650.webp 650w"
           sizes="(max-width: 650px) 100vw"
+          loading="lazy"
         />
       </div>
       <div id="about-me">
