--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div id="about">
       <div class="picture left">
         <img
-          src="assets\images\nina (1).webp"
+          src="assets/images/nina.webp"
           srcset="assets/images/nina-650.webp 650w"
           sizes="(max-width: 650px) 100vw"
         />
