ajout d'un titre et de sa méta

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     ></script>
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
+    <title>
+      Nina Carducci photographe professionnel freelance exerçant sur Bordeaux
+    </title>
+    <meta
+      name="description"
+      content="photographe exerçant sur Bordeaux, spécialisée dans les mariages, les portraits et les événements."
+    />
   </head>
   <body>
     <div class="top-header">
