intégration de l'attribut "alt" aux photos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.png" alt=""
+              ><img src="assets/images/instagram.png" alt="logo instagram"
             /></a>
           </li>
         </ul>
@@ -91,7 +91,7 @@
               "
               sizes="(max-width: 650px) 100vw"
               class="d-block w-100"
-              alt="..."
+              alt="homme d'affaire marchant sur un passage piétion"
               loading="eager"
             />
           </div>
@@ -103,7 +103,7 @@
               "
               sizes="(max-width: 650px) 100vw"
               class="d-block w-100"
-              alt="..."
+              alt="public dans un concert"
             />
           </div>
           <div class="carousel-item">
@@ -114,7 +114,7 @@
               "
               sizes="(max-width: 650px) 100vw"
               class="d-block w-100"
-              alt="..."
+              alt="couple de jeunes mariés qui s'embrassent en dansant"
             />
           </div>
         </div>
@@ -144,6 +144,7 @@
           src="assets/images/nina.webp"
           srcset="assets/images/nina-650.webp 650w"
           sizes="(max-width: 650px) 100vw"
+          alt="portrait de Nina Carducci"
         />
       </div>
       <div id="about-me">
@@ -173,46 +174,55 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             src="assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+            alt="photo d'un concert"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+            alt="portrait d'un homme qui pose en croisant les bras"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="assets\images\gallery\entreprise\jason-goodman-tHO1_OuKbg0-unsplash (1).webp"
+            alt="femme qui rit à son bureau"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="assets\images\gallery\mariage\hannah-busing-RvF2R_qMpRk-unsplash (1).webp"
+            alt="photo de quatre mains qui se touchent"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="assets\images\gallery\portraits\ade-tunji-rVkhWWZFAtQ-unsplash (1).webp"
+            alt="portrait d'un homme fermant les yeux"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="assets\images\gallery\mariage\jakob-owens-SiniLJkXhMc-unsplash (4).webp"
+            alt="photo de jeunes mariés qui marchent ensemble"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="assets\images\gallery\portraits\nino-van-prattenburg--443cl1uR_8-unsplash (2).webp"
+            alt="photo d'une jeune femme posant prés d'un grillage"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="assets\images\gallery\concerts\austin-neill-hgO1wFPXl3I-unsplash (1).webp"
+            alt="photo d'un chanteur"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="assets\images\gallery\entreprise\mateus-campos-felipe-Fsgzm8N0hIY-unsplash (1).webp"
+            alt="photo d'une femme qui rit prés de son ordinateur"
           />
         </div>
       </div>
@@ -310,7 +320,10 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="assets\images\camera (1).webp" />
+          <img
+            src="assets\images\camera (1).webp"
+            alt="photo d'un appareil photo"
+          />
         </div>
       </div>
     </div>
