--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label for="name">Nom :</label>
+            <label for="nom">Nom :</label>
             <input type="text" name="nom" id="nom" required />
             <label for="email">Email :</label>
             <input type="email" name="email" id="email" required />
