--- a/index.html
+++ b/index.html
@@ -87,35 +87,38 @@
             <img
               src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               srcset="
-                assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w
-                assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1300.webp
+                assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp   650w,
+                assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1300.webp 1300w
               "
-              sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw "
+              sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw, 1000px"
               class="d-block w-100"
-              alt="homme d'affaire marchant sur un passage piétion"
+              alt="Homme d'affaires marchant sur un passage piéton"
               loading="eager"
             />
           </div>
           <div class="carousel-item">
             <img
-            src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
-            srcset="
-            assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp
-            650w
-            assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1300.webp "
-            sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw
-            class="d-block w-100" alt="public dans un concert" />
+              src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
+              srcset="
+                assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp   650w,
+                assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1300.webp 1300w
+              "
+              sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw, 1000px"
+              class="d-block w-100"
+              alt="Public dans un concert"
+            />
           </div>
           <div class="carousel-item">
             <img
-            src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
-            srcset="
-            assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp
-            650w
-            assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1300.webp
-            " sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw
-            class="d-block w-100" alt="couple de jeunes mariés qui s'embrassent
-            en dansant" />
+              src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+              srcset="
+                assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp   650w,
+                assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1300.webp 1300w
+              "
+              sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw, 1000px"
+              class="d-block w-100"
+              alt="Couple de jeunes mariés qui s'embrassent en dansant"
+            />
           </div>
         </div>
         <button
