--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw, 1000px"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
-              loading="eager"
+              loading="lazy"
             />
           </div>
           <div class="carousel-item">
