--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp   650w,
                 assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1300.webp 1300w
               "
-              sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw, 1000px"
+              sizes="100vw"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
               loading="lazy"
@@ -103,7 +103,7 @@
                 assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp   650w,
                 assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1300.webp 1300w
               "
-              sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw, 1000px"
+              sizes="100vw"
               class="d-block w-100"
               alt="Public dans un concert"
             />
@@ -115,7 +115,7 @@
                 assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp   650w,
                 assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1300.webp 1300w
               "
-              sizes="(max-width: 650px) 100vw, (max-width: 1024px) 100vw, 1000px"
+              sizes="100vw"
               class="d-block w-100"
               alt="Couple de jeunes mariés qui s'embrassent en dansant"
             />
