--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
+              width="1920"
+              height="887"
               src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               srcset="
                 assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp   650w,
@@ -97,6 +99,8 @@
           </div>
           <div class="carousel-item">
             <img
+              width="1920"
+              height="887"
               src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
               srcset="
                 assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp   650w,
@@ -109,6 +113,8 @@
           </div>
           <div class="carousel-item">
             <img
+              width="1920"
+              height="887"
               src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
               srcset="
                 assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp   650w,
