redimensionnement du slider

--- a/index.html
+++ b/index.html
@@ -87,12 +87,17 @@
             <img
               width="1920"
               height="887"
-              src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1920.webp"
               srcset="
-                assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp   650w,
-                assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1300.webp 1300w
+              assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1920.webp 1920w
+              assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp 1000w
+              assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp  650w
+              assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-450.webp  450w
               "
-              sizes="100vw"
+              sizes="(max-width: 1000px) 1000px,
+							(max-width: 650px) 650px,
+							(max-width: 450px) 450px,
+							1920px"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
             />
@@ -101,12 +106,16 @@
             <img
               width="1920"
               height="887"
-              src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
+              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1920.webp"
               srcset="
-                assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp   650w,
-                assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1300.webp 1300w
+              assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1920.webp 1920w
+              assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1000.webp 1000w
+              assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-650.webp  650w
               "
-              sizes="100vw"
+              sizes="(max-width: 1000px) 1000px,
+							(max-width: 650px) 650px,
+							(max-width: 450px) 450px,
+							1920px"
               class="d-block w-100"
               alt="Public dans un concert"
             />
@@ -115,12 +124,16 @@
             <img
               width="1920"
               height="887"
-              src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+              src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp"
               srcset="
-                assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp   650w,
-                assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1300.webp 1300w
+              assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp 1920w
+              assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w
+              assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-650.webp  650w 
               "
-              sizes="100vw"
+              sizes="(max-width: 1000px) 1000px,
+							(max-width: 650px) 650px,
+							(max-width: 450px) 450px,
+							1920px"
               class="d-block w-100"
               alt="Couple de jeunes mariés qui s'embrassent en dansant"
             />
