--- a/index.html
+++ b/index.html
@@ -57,30 +57,21 @@
               assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp 1000w
               assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp  650w
               assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-450.webp  450w
-              " sizes="(max-width: 1000px) 1000px,
-							(max-width: 650px) 650px,
-							(max-width: 450px) 450px,
-							1920px" class="d-block w-100" alt="Homme d'affaires marchant sur un passage piéton" />
+              " sizes="100vw" class="d-block w-100" alt="Homme d'affaires marchant sur un passage piéton" />
         </div>
         <div class="carousel-item">
           <img src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1920.webp" srcset="
               assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1920.webp 1920w
               assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1000.webp 1000w
               assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-650.webp  650w
-              " sizes="(max-width: 1000px) 1000px,
-							(max-width: 650px) 650px,
-							(max-width: 450px) 450px,
-							1920px" class="d-block w-100" alt="Public dans un concert" />
+              " sizes="100vw" class="d-block w-100" alt="Public dans un concert" />
         </div>
         <div class="carousel-item">
           <img src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp" srcset="
               assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp 1920w
               assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w
               assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-650.webp  650w 
-              " sizes="(max-width: 1000px) 1000px,
-							(max-width: 650px) 650px,
-							(max-width: 450px) 450px,
-							1920px" class="d-block w-100" alt="Couple de jeunes mariés qui s'embrassent en dansant" />
+              " sizes="100vw" class="d-block w-100" alt="Couple de jeunes mariés qui s'embrassent en dansant" />
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
