--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               srcset="
               assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1920.webp 1920w
               assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1000.webp 1000w
-              assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-650.webp  650w
+              assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w
               "
               sizes="(max-width: 1000px) 1000px,
 							(max-width: 650px) 650px,
@@ -121,7 +121,7 @@
               src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp"
               srcset="
               assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp 1920w
-              assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w
+              assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w
               assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-650.webp  650w 
               "
               sizes="(max-width: 1000px) 1000px,
