--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     />
     <link
       rel="preload"
+      as="image"
+      href="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp"
+    />
+
+    <link
+      rel="preload"
       href="assets/images/nina-650.webp"
       as="image"
       type="image/webp"
