--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 							1920px"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
+              loading="lazy"
             />
           </div>
           <div class="carousel-item">
