--- a/index.html
+++ b/index.html
@@ -137,12 +137,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img
-          src="assets/images/nina.webp"
-          srcset="assets/images/nina-650.webp 650w"
-          sizes="(max-width: 650px) 100vw"
-          alt="portrait de Nina Carducci"
-        />
+        <img src="assets/images/nina.webp" alt="portrait de Nina Carducci" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
