--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="preload"
+      as="image"
+      href="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp"
+    />
 
     <link
       rel="preload"
