--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="preload"
-      as="image"
-      href="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp"
-    />
 
-    <link
-      rel="preload"
-      href="assets/images/nina-650.webp"
-      as="image"
-      type="image/webp"
-    />
     <meta charset="UTF-8" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -142,7 +131,11 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="assets/images/nina.webp" alt="portrait de Nina Carducci" />
+        <img
+          src="assets/images/nina.webp"
+          alt="portrait de Nina Carducci"
+          loading="lazy"
+        />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
