--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp"
+              src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
               loading="eager"
@@ -97,14 +97,14 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-1000.webp"
+              src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1000.webp"
               class="d-block w-100"
               alt="Public dans un concert"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\slider\edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp"
+              src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp"
               class="d-block w-100"
               alt="Couple de jeunes mariés qui s'embrassent en dansant"
             />
