--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link
       rel="preload"
       as="image"
-      href="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp"
+      href="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp"
     />
 
     <meta charset="UTF-8" />
@@ -94,7 +94,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp"
+              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
               loading="eager"
