--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="container">
         <div class="service">
           <div class="service__description">
-            <h3>Shooting photo</h3>
+            <h1 class="shooting">Shooting</h1>
             <p>
               Pour capturer vos moments les plus précieux et garder un souvenir
               impérissable. Je me déplace en Île-de-France pour réaliser vos
