--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </div>
         <div class="service">
           <div class="service__description">
-            <h3>Retouches</h3>
+            <h1 class="retouch">Retouches</h1>
             <p>
               Vous souhaitez retoucher vos photos pour un résultat professionnel
               ? Bénéficier d’un rendu optimal pour vos publications
@@ -268,7 +268,7 @@
         </div>
         <div class="service">
           <div class="service__description">
-            <h3>Album photos</h3>
+            <h1 class="album-photo">Album photos</h1>
             <p>
               Partagez avec vos proches et vos clients les photos des moments
               partagés ensemble à travers un album photo personnalisé
