--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </p>
           </div>
           <div class="service__price">
-            <h4>350€/demi journée</h4>
+            <h2 class="price">350€/demi journée</h2>
             <span>Matériel, déplacement inclus</span>
           </div>
         </div>
@@ -262,7 +262,7 @@
             </p>
           </div>
           <div class="service__price">
-            <h4>50€/photo</h4>
+            <h2 class="price">50€/photo</h2>
             <span>2 AR par photo</span>
           </div>
         </div>
@@ -275,7 +275,7 @@
             </p>
           </div>
           <div class="service__price">
-            <h4>400€ album A4</h4>
+            <h2 class="price">400€ album A4</h2>
             <span>30 pages recto/verso</span>
           </div>
         </div>
