--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Nina Carducci photographe professionnel freelance exerçant sur Bordeaux
+    </title>
+    <meta
+      name="title"
+      content="
+      Nina Carducci photographe professionnel freelance exerçant sur Bordeaux"
+    />
+    <meta
+      name="description"
+      content="photographe exerçant sur Bordeaux, spécialisée dans les mariages, les portraits et les événements."
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
       as="image"
       href="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp"
     />
 
-    <meta charset="UTF-8" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -34,12 +46,65 @@
     ></script>
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
-    <title>
-      Nina Carducci photographe professionnel freelance exerçant sur Bordeaux
-    </title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "localBusiness",
+        "name": "Nina Carducci Photographe",
+        "description": "Photographe exerçant à Bordeaux, spécialisée dans les mariages, les concerts et les événements",
+        "jobTitle": "Photographe",
+        "url": "https://jeff397.github.io/openclassroom-ninacarducci/",
+        "image": "https://jeff397.github.io/openclassroom-ninacarducci/assets/images/nina.webp",
+        "telephone": "05 56 67 78 89"
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Bordeaux",
+          "addressRegion": "Gironde",
+          "addressCountry":"FR"
+          "postalCode": "33200",
+          "streetAddress": "68 avenue Alsace-Lorraine"
+        },
+        "sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr",
+        "openingHours": "lundi-Vendredi 10h00-19h00"
+
+      }
+    </script>
+
+    <meta property="og:type" content="website" />
     <meta
-      name="description"
+      property="og:url"
+      content="https://jeff397.github.io/openclassroom-ninacarducci/"
+    />
+    <meta
+      property="og:title"
+      content="
+      Nina Carducci photographe professionnel freelance exerçant sur Bordeaux"
+    />
+    <meta
+      property="og:description"
       content="photographe exerçant sur Bordeaux, spécialisée dans les mariages, les portraits et les événements."
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/jeff397/openclassroom-ninacarducci/blob/main/assets/images/nina.webp"
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://jeff397.github.io/openclassroom-ninacarducci/"
+    />
+    <meta
+      property="twitter:title"
+      content="
+      Nina Carducci photographe professionnel freelance exerçant sur Bordeaux"
+    />
+    <meta
+      property="twitter:description"
+      content="photographe exerçant sur Bordeaux, spécialisée dans les mariages, les portraits et les événements."
+    />
+    <meta
+      property="twitter:image"
+      content="https://github.com/jeff397/openclassroom-ninacarducci/blob/main/assets/images/nina.webp"
     />
   </head>
 
