--- a/index.html
+++ b/index.html
@@ -49,24 +49,23 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "localBusiness",
+        "@type": "LocalBusiness",
         "name": "Nina Carducci Photographe",
         "description": "Photographe exerçant à Bordeaux, spécialisée dans les mariages, les concerts et les événements",
         "jobTitle": "Photographe",
         "url": "https://jeff397.github.io/openclassroom-ninacarducci/",
         "image": "https://jeff397.github.io/openclassroom-ninacarducci/assets/images/nina.webp",
-        "telephone": "05 56 67 78 89"
+        "telephone": "05 56 67 78 89",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Bordeaux",
           "addressRegion": "Gironde",
-          "addressCountry":"FR"
+          "addressCountry": "FR",
           "postalCode": "33200",
           "streetAddress": "68 avenue Alsace-Lorraine"
         },
-        "sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr",
-        "openingHours": "lundi-Vendredi 10h00-19h00"
-
+        "sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
+        "openingHours": "Mo-Fr 10:00-19:00"
       }
     </script>
 
