--- a/index.html
+++ b/index.html
@@ -158,21 +158,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp"
+              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash-650.webp"
+              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash.webp"
               class="d-block w-100"
               alt="Public dans un concert"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp"
+              src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
               class="d-block w-100"
               alt="Couple de jeunes mariés qui s'embrassent en dansant"
             />
@@ -244,43 +244,43 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="assets\images\gallery\entreprise\jason-goodman-tHO1_OuKbg0-unsplash (1).webp"
+            src="assets\images\gallery\entreprise\jason-goodman-tHO1_OuKbg0-unsplash.webp"
             alt="femme qui rit à son bureau"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="assets\images\gallery\mariage\hannah-busing-RvF2R_qMpRk-unsplash (1).webp"
+            src="assets\images\gallery\mariage\hannah-busing-RvF2R_qMpRk-unsplash.webp"
             alt="photo de quatre mains qui se touchent"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="assets\images\gallery\portraits\ade-tunji-rVkhWWZFAtQ-unsplash (1).webp"
+            src="assets\images\gallery\portraits\ade-tunji-rVkhWWZFAtQ-unsplash.webp"
             alt="portrait d'un homme fermant les yeux"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="assets\images\gallery\mariage\jakob-owens-SiniLJkXhMc-unsplash (4).webp"
+            src="assets\images\gallery\mariage\jakob-owens-SiniLJkXhMc-unsplash.webp"
             alt="photo de jeunes mariés qui marchent ensemble"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="assets\images\gallery\portraits\nino-van-prattenburg--443cl1uR_8-unsplash (2).webp"
+            src="assets\images\gallery\portraits\nino-van-prattenburg--443cl1uR_8-unsplash.webp"
             alt="photo d'une jeune femme posant prés d'un grillage"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="assets\images\gallery\concerts\austin-neill-hgO1wFPXl3I-unsplash (1).webp"
+            src="assets\images\gallery\concerts\austin-neill-hgO1wFPXl3I-unsplash.webp"
             alt="photo d'un chanteur"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="assets\images\gallery\entreprise\mateus-campos-felipe-Fsgzm8N0hIY-unsplash (1).webp"
+            src="assets\images\gallery\entreprise\mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
             alt="photo d'une femme qui rit prés de son ordinateur"
           />
         </div>
@@ -381,7 +381,7 @@
         </div>
         <div class="picture right">
           <img
-            src="assets\images\camera (1).webp"
+            src="assets\images\camera.webp"
             alt="photo d'un appareil photo"
           />
         </div>
