--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
           <div class="carousel-item active">
             <img
               src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (13).webp"
+              width="100%"
+              height="auto"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
               loading="eager"
