--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </ul>
     </nav>
   </header>
-  <section id="home-caroussel">
+  <div id="home-caroussel">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -121,7 +121,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-  </section>
+  </div>
 
   <main>
     <section id="about">
@@ -174,7 +174,7 @@
             src="assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
             alt="photo d'une jeune femme posant prés d'un grillage" />
           <img data-gallery-tag="Concert" class="gallery-item"
-            src="assets/images/gallery/concerts\austin-neill-hgO1wFPXl3I-unsplash.webp" alt="photo d'un chanteur" />
+            src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="photo d'un chanteur" />
           <img data-gallery-tag="Entreprises" class="gallery-item"
             src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
             alt="photo d'une femme qui rit prés de son ordinateur" />
