--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <section id="about">
         <div class="picture left">
           <img
-            src="assets/images/nina.webp"
+            src="assets\images\nina (5).webp"
             alt="portrait de Nina Carducci"
             width="426"
             height="425"
