--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
               alt="Public dans un concert"
               width="1920"
               height="888"
+              loading="lazy"
             />
           </div>
           <div class="carousel-item">
@@ -181,6 +182,7 @@
               alt="Couple de jeunes mariés qui s'embrassent en dansant"
               width="1920"
               height="888"
+              loading="lazy"
             />
           </div>
         </div>
