--- a/index.html
+++ b/index.html
@@ -159,9 +159,11 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (19).webp"
+              src="assets\images\slider\ryoji-iwata.webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
+              width="1920"
+              height="888"
               loading="eager"
             />
           </div>
@@ -170,6 +172,8 @@
               src="assets\images\slider\nicholas-green.webp"
               class="d-block w-100"
               alt="Public dans un concert"
+              width="1920"
+              height="888"
               loading="lazy"
             />
           </div>
@@ -178,6 +182,8 @@
               src="assets/images/slider/edward-cisneros.webp"
               class="d-block w-100"
               alt="Couple de jeunes mariés qui s'embrassent en dansant"
+              width="1920"
+              height="888"
               loading="lazy"
             />
           </div>
