--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
               src="assets\images\slider\ryoji-iwata (1).webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
-              width="1920"
-              height="888"
+              style="width: 100%; height: auto"
               loading="eager"
             />
           </div>
