--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
               src="assets\images\slider\nicholas-green.webp"
               class="d-block w-100"
               alt="Public dans un concert"
-              width="1920"
-              height="888"
+              style="width: 100%; height: auto"
               loading="lazy"
             />
           </div>
@@ -181,8 +180,7 @@
               src="assets/images/slider/edward-cisneros.webp"
               class="d-block w-100"
               alt="Couple de jeunes mariés qui s'embrassent en dansant"
-              width="1920"
-              height="888"
+              style="width: 100%; height: auto"
               loading="lazy"
             />
           </div>
