--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         "url": "https://jeff397.github.io/openclassroom-ninacarducci/",
         "image": "https://jeff397.github.io/openclassroom-ninacarducci/assets/images/nina.webp",
         "telephone": "05 56 67 78 89",
+        "priceRange": "40€ 400€",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Bordeaux",
